Design/bugfixes (#519)
* [components] Spacing in fullscreen dialog

* [components] No extra padding on defaultpane content

* [components] No border in the ends of list items

* [form-builder] Blur events on reference input

* [components] Using non-svg for placeholder

--- a/packages/@sanity/components/src/panes/styles/DefaultPane.css
+++ b/packages/@sanity/components/src/panes/styles/DefaultPane.css
@@ -183,7 +183,7 @@
   box-sizing: border-box;
 
   @media (--screen-medium) {
-    padding-bottom: 3rem;
+    padding-bottom: 0;
   }
 
   @nest .isCollapsed & {
